--- a/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
+++ b/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
@@ -22,8 +22,10 @@
 
 [include Var.cfg]                #All custom variables included, 包含所有的自定义参数
 [include Lite_haredware.cfg]
+#[include Filament_buffer_long.cfg]
+#[include Filament_buffer_short.cfg]
 [include Filament_buffer.cfg]
-
+[include bug_fix.cfg]
 [display_status]
 
 [gcode_macro T0]                ##有几个通道就添加几个
@@ -68,6 +70,7 @@ description:把指定挤出机的序列号写入文件
 gcode:
         {% set x= params.WAKEUP|default(0)|int %}  
         SAVE_VARIABLE VARIABLE=currentextruder VALUE={x}
+
 
 [gcode_macro moveout]
 description:中断/初始化所有的远程送料电机
@@ -133,7 +136,8 @@ gcode:
     SET_GCODE_VARIABLE MACRO=var VARIABLE=runout VALUE={1} ##更新为进入change_tool命令
 
     colorhotup  #将进料和退料的加热代码，无论是否打印过程中，触发change_tool，都会进行温度判断
-   
+
+    buffer_OFF
     {% if state == 0 %}  
         {% if printer.homed_axes != 'XYZ' %}                          ##保护代码，防止非打印过程中的切换直接撞墙(因为我开机就启动了强制移动的代码)
               G28            #Home
@@ -150,7 +154,7 @@ gcode:
                 {% if state == 1 %}   
                     pause                                             ##如果在打印中，先触发暂停
                 {% endif %}	
-                {action_respond_info("耗材从 %s 切换到 %s 号位耗材" % (svv, TOOL))}
+                {action_respond_info("耗材从 %s 切换到 %s 号位耗材" % (svvc, TOOL))}
                 wakeup WAKEUP={svvc}                                  ##唤醒近程挤出机与断电时的挤出机	
                 cut                                                   ##切刀
                 tuiliao OUT_NUM={svvc}                                ##退出上次耗材
@@ -158,11 +162,12 @@ gcode:
                 jinliao IN_NUM={TOOL}                                 ##加载本次耗材
           {% else %}                                                  ##如果等于断电时的耗材情况,即不用触发耗材的切换程序,直接使用即可
                 wakeup WAKEUP={TOOL}                                  ##唤醒近程挤出机与tool挤出机
-                {action_respond_info("目前加载的正是 %d号位耗材" % (TOOL))}
+                {action_respond_info("目前加载的正是 %d 号位耗材" % (TOOL))}
           {% endif %}
      {% endif %}
 
      SAVE_VARIABLE VARIABLE=currentextruder VALUE={TOOL}              #耗材切换完成，最后触发外部文件并记录当前的挤出机TOOL的num号，mm
+     Set_Rotation{svvc}                                               #耗材切换完成，最后触发外部文件并记录当前的挤出机的rotation_distance，mm
 
      {% if state == 1 %}                                   
           SET_GCODE_VARIABLE MACRO=var VARIABLE=runout VALUE={2}      ##更新为change_tool命令结束，命令只触发于打印阶段    
@@ -173,6 +178,8 @@ gcode:
 description:四模块进料								 							     ##中文注释
 variable_tnum:0										  								##用于临时存储变量      
 gcode:
+    {% set svv = printer.save_variables.variables %}                                ###获取断电时候的耗材的序号 “0、1、2、3”
+    {% set svvc = svv.currentextruder %}                                            #变量名长度优化
 	moveout											  								##初始化所有远近挤出机
     {% set tnum = params.IN_NUM|default(0)|int %}									##设置变量tnum用于选择预进料电机t0,t1,t2....
 	{action_respond_info("当前为 %d号位颜色进料" % (tnum))}							  ##显示目前选择的通道数量
@@ -180,27 +187,30 @@ gcode:
 	{% set inout = printer['filament_switch_sensor INOUT'].filament_detected %}  	##设置变量inout获取近程挤出机是否进料
     
 	{% if inout == 1 %}																##判断inout是否进料（1是进料，0是没进料）
-    	{action_respond_info("进料失败，已有耗材存在，请先完成退料")}							##显示请先完成退料（因为已经加载耗材了，就无法在加载耗材了）
+        SAVE_VARIABLE VARIABLE=tempextruder VALUE={tnum}          ##引入新的存盘变量，尽量让bug程序独立于主程序以外。New parameter insert, to make the bug marco indepandent. 
+    	{action_respond_info("进料失败，已有耗材存在，请先完成 %d 退料,再点击继续"% (svvc))}		##显示请先完成退料（因为已经加载耗材了，就无法在加载耗材了）
+        M117 请手动退出当前失败耗材
+        buffer_off
+        prevent_idle IN_NUM={tnum}            ##故障排除宏，持续更新中 bug_fix marco, need to update later
 	{% else %}																		##如果近程挤出机没有加载耗材
         {action_respond_info("正在为您加载 %d号位耗材" % (tnum))}			  ##显示正在加载耗材
         wakeup WAKEUP={tnum}  
   	 	G92 E0
   	 	G1 E{printer["gcode_macro var"].s0} F{printer["gcode_macro var"].speed0}	##t0挤出机以s0的距离，speed0的速度工作
+	    {action_respond_info("当正在为您加载 %d号位耗材:二次确认" % (tnum))}				   ##显示文本二次确认
 	    UPDATE_DELAYED_GCODE ID=jinliao DURATION=1 						##启动延时GCODE，方便持续检测
 	{% endif %}
-    
+
 [delayed_gcode jinliao]
 initial_duration: 0
 gcode:
-	 {% set tnum= printer['gcode_macro jinliao']['tnum'] %}								##将刚获取的存储在jinliao的tunm
 	 {% set state= printer['gcode_macro var']['state'] %}								##获取var中的state（处于任务时state=1，未处于任务时state=0）默认为0
-	 {action_respond_info("当正在为您加载 %d号位耗材:二次确认" % (tnum))}				   ##显示文本二次确认
 	 {% set inout = printer['filament_switch_sensor INOUT'].filament_detected %}		##设置变量inout获取近程挤出机是否进料
-
  	 	{% if inout == 0  %}          													##如果近程挤出没有检测到耗材，强制刷新持续时长
                 UPDATE_DELAYED_GCODE ID=jinliao DURATION=1									##启动延时GCODE，方便持续检测
   	  		    G92 E0
   	  		    G1 E{printer["gcode_macro var"].inputs} F{printer["gcode_macro var"].inputspeed}
+                {action_respond_info("进料中......")}
                 G4 P100
 	  	{% else %}   
             {action_respond_info("已完成耗材加载")}										 ##显示已成功加载耗材
@@ -229,6 +239,7 @@ gcode:
         wakeup WAKEUP={tnum}																	##同时唤醒ex与t0挤出机同步工作
 	    G1 E{printer["gcode_macro var"].outs} F{printer["gcode_macro var"].outspeed}	##t0挤出机以outs的距离，outspeed的速度工作
 	{% endif %}
+
 
 ##########################################################################################################################
 ##预升温↓↓↓↓↓↓##
