--- a/AMS_LITE_Voron24 cfg/printer.cfg
+++ b/AMS_LITE_Voron24 cfg/printer.cfg
@@ -45,7 +45,7 @@ gcode:
     
     SAVE_GCODE_STATE NAME=STATE_PRINT_END
     #buffer M=0
-
+    buffer_OFF
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-5.0 F1800                 ; retract filament
@@ -65,7 +65,8 @@ gcode:
 gcode:
     {% set svv = printer.save_variables.variables %}
     { action_respond_info("Last Extruder: T%d" % (svv.currentextruder) ) }
-    buffer M=1
+    wakeup WAKEUP={svv.currentextruder}  
+    #buffer M=1
     
 [temperature_sensor CPU]
 sensor_type: temperature_host
@@ -169,14 +170,14 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = 4.150
+#*# z_offset = 4.100
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.021021, -0.008667, 0.036646
-#*# 	0.127271, 0.064771, -0.053979
-#*# 	0.031958, 0.033521, 0.019458
+#*# 	0.041641, -0.011484, 0.049453
+#*# 	0.127578, 0.066641, -0.031797
+#*# 	0.055703, 0.047891, 0.035391
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
