--- a/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
+++ b/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
@@ -26,32 +26,75 @@
 #[include Filament_buffer_short.cfg]
 [include Filament_buffer.cfg]
 [include bug_fix.cfg]
+[include Filament_Switch_Sensor.cfg]
+
 [display_status]
+
+[gcode_macro prepare_for_printing]
+description:所有开始打印前的变量重置和状态设置代码，在starting_print代码最开始直接加入这个宏即可
+gcode:
+    	SET_GCODE_VARIABLE MACRO=var VARIABLE=state VALUE={1} ##更新为打印状态
+        reset_continue
+        buffer_start
 
 [gcode_macro T0]                ##有几个通道就添加几个
 gcode:
-    change_tool TOOL=0
+    {% set svv = printer.save_variables.variables %}
+    {% set con = svv.continue0 %}  
+    {% if con == 1 %}  
+       {action_respond_info("T0 intead tunnel used") }
+       change_tool TOOL={printer["gcode_macro var"].filament0}
+    {% else %} 
+       change_tool TOOL=0
+    {% endif %} 
 
 [gcode_macro T1]
 gcode:
-    change_tool TOOL=1
+    {% set svv = printer.save_variables.variables %}
+    {% set con = svv.continue1 %}  
+    {% if con == 1 %}  
+       {action_respond_info("T1 intead tunnel used") }
+       change_tool TOOL={printer["gcode_macro var"].filament1}
+    {% else %} 
+       change_tool TOOL=1
+    {% endif %} 
 
 [gcode_macro T2]
 gcode:
-    change_tool TOOL=2
+    {% set svv = printer.save_variables.variables %}
+    {% set con = svv.continue2 %}  
+    {% if con == 1 %}
+       {action_respond_info("T2 intead tunnel used") }
+       change_tool TOOL={printer["gcode_macro var"].filament2}
+    {% else %} 
+       change_tool TOOL=2
+    {% endif %} 
 
 [gcode_macro T3]
 gcode:
-    change_tool TOOL=3
+    {% set svv = printer.save_variables.variables %}
+    {% set con = svv.continue3 %}  
+    {% if con == 1 %}  
+       {action_respond_info("T3 intead tunnel used") }
+       change_tool TOOL={printer["gcode_macro var"].filament3}
+    {% else %} 
+       change_tool TOOL=3
+    {% endif %} 
 
 [gcode_macro T4]
 gcode:
-    change_tool TOOL=4
+    {% set svv = printer.save_variables.variables %}
+    {% set con = svv.continue4 %}  
+    {% if con == 1 %}  
+       {action_respond_info("T4 intead tunnel used") }
+       change_tool TOOL={printer["gcode_macro var"].filament4}
+    {% else %} 
+       change_tool TOOL=4
+    {% endif %} 
+
 ##如果要添加新通道请参考模板修改X的内容↓↓↓
 #[gcode_macro TX]
-#variable_num:X          ##通道X
 #gcode:
-#    SET_GCODE_VARIABLE MACRO=CHANGE_TOOL VARIABLE=innum VALUE={X}
 #    change_tool TOOL=X
 ##如果要添加新通道请参考模板修改X的内容↑↑↑
 
@@ -130,6 +173,7 @@ gcode:
     {% set svvc = svv.currentextruder %}                                            #变量名长度优化
     {% set TOOL = params.TOOL|default(nownum)|int %}                                    ##选择喷头
     {action_respond_info("当前选择为 %d号位耗材" % (TOOL))}                               ##显示文本
+    M117 Selection filament
     {% set inout = printer['filament_switch_sensor INOUT'].filament_detected %}         ##inout状态，判断耗材是否加载至喷头处
     {% set state= printer['gcode_macro var']['state'] %}				##获取var中的state（处于打印任务时state=1，未处于打印任务时state=0）默认为0
 
@@ -189,7 +233,7 @@ gcode:
 	{% if inout == 1 %}																##判断inout是否进料（1是进料，0是没进料）
         SAVE_VARIABLE VARIABLE=tempextruder VALUE={tnum}          ##引入新的存盘变量，尽量让bug程序独立于主程序以外。New parameter insert, to make the bug marco indepandent. 
     	{action_respond_info("进料失败，已有耗材存在，请先完成 %d 退料,再点击继续"% (svvc))}		##显示请先完成退料（因为已经加载耗材了，就无法在加载耗材了）
-        M117 请手动退出当前失败耗材
+        M117 hotend material exist, can't load another
         buffer_off
         prevent_idle IN_NUM={tnum}            ##故障排除宏，持续更新中 bug_fix marco, need to update later
 	{% else %}																		##如果近程挤出机没有加载耗材
@@ -211,9 +255,11 @@ gcode:
   	  		    G92 E0
   	  		    G1 E{printer["gcode_macro var"].inputs} F{printer["gcode_macro var"].inputspeed}
                 {action_respond_info("进料中......")}
+                M117 Loading....
                 G4 P100
 	  	{% else %}   
             {action_respond_info("已完成耗材加载")}										 ##显示已成功加载耗材
+            M117 Load successful!
             G92 E0
             G1 E{printer["gcode_macro var"].inputoks} F{printer["gcode_macro var"].inputokspeed}
             UPDATE_DELAYED_GCODE ID=jinliao DURATION=0									##关闭延时GCODE（因为已经加载到位了）
@@ -231,15 +277,11 @@ gcode:
 	{action_respond_info("当前退料为 %d号位颜色" % (tnum))}							  ##显示目前退出通道
 	{% set inout = printer['filament_switch_sensor INOUT'].filament_detected %}  	##设置变量inout获取近程挤出机是否进料
 
-	{% if inout == 0 %}																##判断inout是否进料（1是进料，0是没进料）
-        {action_respond_info("请先确认是否进料")}									 ##显示请先完成退进料（如果ex挤出没有检测到耗材）
-	{% else %}
         {action_respond_info("正在为您退出 %d号位耗材" % (tnum))}		  				  ##显示正在为你退出某耗材
+        M117 unloading...
 	    G92 E0
         wakeup WAKEUP={tnum}																	##同时唤醒ex与t0挤出机同步工作
 	    G1 E{printer["gcode_macro var"].outs} F{printer["gcode_macro var"].outspeed}	##t0挤出机以outs的距离，outspeed的速度工作
-	{% endif %}
-
 
 ##########################################################################################################################
 ##预升温↓↓↓↓↓↓##
