--- a/AMS_LITE_Voron24 cfg/Var.cfg
+++ b/AMS_LITE_Voron24 cfg/Var.cfg
@@ -7,8 +7,18 @@ filename: ~/printer_data/config/variables.cfg
 [gcode_macro var]
 variable_temp: 175					#用于存储默认升温温度
 
-variable_tt0: 220 #T0默认温度
-variable_tt1: 198 #T1默认温度
+variable_tt0: 200 #T0默认温度
+variable_tt1: 201 #T1默认温度
+variable_tt2: 202 #T2默认温度
+variable_tt3: 203 #T3默认温度
+variable_tt4: 203 #T3默认温度
+
+#耗材接替顺序，如不特别设置，默认用轮换模式0-1-2-3-0
+variable_filament0: 1        
+variable_filament1: 2
+variable_filament2: 3
+variable_filament3: 4
+variable_filament4: 0
 
 #variable_turn: 0 
 variable_tunnel: 5                  #用于存储当前的通道数量，从1开始,mm
