--- a/AMS_LITE_Voron24 cfg/printer.cfg
+++ b/AMS_LITE_Voron24 cfg/printer.cfg
@@ -25,12 +25,11 @@ resolution: 0.1
 
 [gcode_macro PRINT_START] #Some of the custom start gcode will make the AMS not work correctly, need to check carefully
 gcode: 
-	SET_GCODE_VARIABLE MACRO=var VARIABLE=state VALUE={1} ##更新为打印状态
-	G32         ##就在上面自定义的
-    #G28
+    prepare_for_printing
+	#G32         ##就在上面自定义的
+    G28
 	G90         ##相对绝对坐标切换
     G0 Z1
-    buffer_start
 	#M109 S{printer.extruder.target}      ##恢复打印头温度
 
 
@@ -65,8 +64,9 @@ gcode:
 gcode:
     {% set svv = printer.save_variables.variables %}
     { action_respond_info("Last Extruder: T%d" % (svv.currentextruder) ) }
-    wakeup WAKEUP={svv.currentextruder}  
-    #buffer M=1
+    wakeup WAKEUP={svv.currentextruder} 
+    resetcontinue
+
     
 [temperature_sensor CPU]
 sensor_type: temperature_host
