--- a/AMS_LITE_Voron24 cfg/bug_fix.cfg
+++ b/AMS_LITE_Voron24 cfg/bug_fix.cfg
@@ -51,6 +51,7 @@ gcode:
       	  	G92 E0
     	    G1 E-10 F600
             {action_respond_info("出错！尝试退料同时防止机器待机，如不成功，请手动排除故障，并恢复打印")}
+            M117 hotend material exist, can't load another
             G4 P1000
             UPDATE_DELAYED_GCODE ID=strong_unload DURATION=5
 	  	{% else %}   
