--- a/AMS_LITE_Voron24 cfg/Var.cfg
+++ b/AMS_LITE_Voron24 cfg/Var.cfg
@@ -7,12 +7,6 @@ filename: ~/printer_data/config/variables.cfg
 [gcode_macro var]
 variable_temp: 175					#用于存储默认升温温度
 
-variable_tt0: 200 #T0默认温度
-variable_tt1: 201 #T1默认温度
-variable_tt2: 202 #T2默认温度
-variable_tt3: 203 #T3默认温度
-variable_tt4: 203 #T3默认温度
-
 #耗材接替顺序，如不特别设置，默认用轮换模式0-1-2-3-0
 variable_filament0: 1        
 variable_filament1: 2
@@ -48,3 +42,25 @@ variable_outspeed:1200				#退料——耗材从喷头退出的速度
 
 ##### ↑↑↑ mz_out_color.cfg 变量↑↑↑ #####
 gcode:
+
+###以下的宏是为了能够让打印机切换耗材以后同时能读到切换耗材位置的温度并给喷头设置该温度
+##请手动更新以下各通道的温度数值
+[gcode_macro tt0]
+gcode:
+    M109 S{200}
+
+[gcode_macro tt1]
+gcode:
+    M109 S{201}
+
+[gcode_macro tt2]
+gcode:
+    M109 S{202}
+
+[gcode_macro tt3]
+gcode:
+    M109 S{203}
+
+[gcode_macro tt4]
+gcode:
+    M109 S{204}
