--- a/AMS_LITE_Voron24 cfg/Filament_Switch_Sensor.cfg
+++ b/AMS_LITE_Voron24 cfg/Filament_Switch_Sensor.cfg
@@ -28,45 +28,40 @@ gcode:
 
 [gcode_macro I0]
 gcode:
-    {% set tt= printer['gcode_macro var']['tt1'] %}    ###important::this value should be changed to same as filament0's value, for example: if you define variable_filament0: 2 in var.cfg, it shoube be "tt2"
     {% set insteadof=printer["gcode_macro var"]['filament0'] %}
     SAVE_VARIABLE VARIABLE=continue0 VALUE=1       ##mark the tunnel 0 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
-    M109 S{tt}
+    tt{insteadof}
     jinliao IN_NUM={insteadof}
 
 [gcode_macro I1]
 gcode:
-    {% set tt= printer['gcode_macro var']['tt2'] %}
     {% set insteadof=printer["gcode_macro var"]['filament1'] %}
     SAVE_VARIABLE VARIABLE=continue1 VALUE=1       ##mark the tunnel 1 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
-    M109 S{tt}
+    tt{insteadof}
     jinliao IN_NUM={insteadof}
 
 [gcode_macro I2]
 gcode:
-    {% set tt= printer['gcode_macro var']['tt3'] %}
     {% set insteadof=printer["gcode_macro var"]['filament2'] %}
     SAVE_VARIABLE VARIABLE=continue2 VALUE=1       ##mark the tunnel 2 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
-    M109 S{tt}
+    tt{insteadof}
     jinliao IN_NUM={insteadof}
 
 [gcode_macro I3]
 gcode:
-    {% set tt= printer['gcode_macro var']['tt4'] %}
     {% set insteadof=printer["gcode_macro var"]['filament3'] %}
     SAVE_VARIABLE VARIABLE=continue3 VALUE=1       ##mark the tunnel 3 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
-    M109 S{tt}
+    tt{insteadof}
     jinliao IN_NUM={insteadof}
 
 [gcode_macro I4]
 gcode:
-    {% set tt= printer['gcode_macro var']['tt0'] %}
     {% set insteadof=printer["gcode_macro var"]['filament4'] %}
     SAVE_VARIABLE VARIABLE=continue4 VALUE=1       ###mark the tunnel 4 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
-    M109 S{tt}
+    tt{insteadof}
     jinliao IN_NUM={insteadof}
