--- a/AMS_LITE_Voron24 cfg/bug_fix.cfg
+++ b/AMS_LITE_Voron24 cfg/bug_fix.cfg
@@ -20,21 +20,19 @@ gcode:
 description:备份四模块进料								 							 ##中文注释
 #variable_tnum:0										 								##用于临时存储变量      
 gcode:
-    {% set EXTRUDER_TEMP = params.HOTEND|default(200)|float %}
     {% set BED_TEMP = params.BED|default(50)|float %}
     M140 S{ BED_TEMP}    #温度恢复
-    M109 S{EXTRUDER_TEMP} 
-	moveout											 								##初始化所有远近挤出机
+    moveout											 								##初始化所有远近挤出机
 	{% set svv = printer.save_variables.variables %}                                ###获取断电时候的耗材的序号 “0、1、2、3”
     {action_respond_info("当前为 %d号位颜色进料——INOUT备份进料程序" % (svv.tempextruder))}		
-
+    tt{svv.tempextruder}                                                          ###温度设定
     wakeup WAKEUP={svv.tempextruder}  
 	UPDATE_DELAYED_GCODE ID=jinliao DURATION=1 						           ##启动延时GCODE，方便持续检测
 
     #以下内容是change_tool的搬移，主要为了恢复各种参数变量的状态，防止下一次切换颜色发生错误
     #below part is copy from change_tool marco. to prepare the correct value for every parameter, which is helpful for the color change.
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={svv.tempextruder}      
-    Set_Rotation{svvc}                                               
+    Set_Rotation{svv.tempextruder}                                               
 
     {% if state == 1 %}                                   
           SET_GCODE_VARIABLE MACRO=var VARIABLE=runout VALUE={2}    
