--- a/AMS_LITE_Voron24 cfg/Filament_buffer.cfg
+++ b/AMS_LITE_Voron24 cfg/Filament_buffer.cfg
@@ -49,8 +49,11 @@ gcode:
 [gcode_macro buffer_OFF]
 gcode:
       SET_FILAMENT_SENSOR SENSOR=buffer ENABLE=0
+      rotation_revert
       UPDATE_DELAYED_GCODE ID=fastkeep DURATION=0
 
+
+#记录当前挤出机速率到文件,需要根据实际通道数量更新
 [gcode_macro Set_Rotation0]
 gcode:
     {% set svv = printer.save_variables.variables %}
