--- a/AMS_LITE_Voron24 cfg/Filament_Continue.cfg
+++ b/AMS_LITE_Voron24 cfg/Filament_Continue.cfg
@@ -10,14 +10,15 @@ runout_gcode:
     {% set svv = printer.save_variables.variables %}                                ###获取断电时候的耗材的序号 “0、1、2、3”
     {% set svvc = svv.currentextruder %}     
   
-                {% if runout == 2 %}                                   
-                     pause                                            
-                     {action_respond_info("耗材 %s 耗尽，即将切换到指定位置耗材" % (svvc))} 
-                     {action_respond_info("Filament %s runout, will choose instead tunnel" % (svvc))}
-                     M117 Filament runout
-                     I{svvc}                   
-                {% endif %}	
+    {% if runout == 2 %}                                   
+       pause                                            
+       {action_respond_info("耗材 %s 耗尽，即将切换到指定位置耗材" % (svvc))} 
+       {action_respond_info("Filament %s runout, will choose instead tunnel" % (svvc))}
+       M117 Filament runout
+       I{svvc}                   
+    {% endif %}	
 
+#需要根据实际通道数量更新
 [gcode_macro reset_continue]
 gcode:
     SAVE_VARIABLE VARIABLE=continue0 VALUE=0
@@ -25,12 +26,14 @@ gcode:
     SAVE_VARIABLE VARIABLE=continue2 VALUE=0
     SAVE_VARIABLE VARIABLE=continue3 VALUE=0
     SAVE_VARIABLE VARIABLE=continue4 VALUE=0
+    #SAVE_VARIABLE VARIABLE=continueX VALUE=0
 
 [gcode_macro I0]
 gcode:
     {% set insteadof=printer["gcode_macro var"]['filament0'] %}
     SAVE_VARIABLE VARIABLE=continue0 VALUE=1       ##mark the tunnel 0 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
+    Set_Rotation{insteadof}
     tt{insteadof}
     jinliao IN_NUM={insteadof}
 
@@ -39,6 +42,7 @@ gcode:
     {% set insteadof=printer["gcode_macro var"]['filament1'] %}
     SAVE_VARIABLE VARIABLE=continue1 VALUE=1       ##mark the tunnel 1 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
+    Set_Rotation{insteadof}
     tt{insteadof}
     jinliao IN_NUM={insteadof}
 
@@ -47,6 +51,7 @@ gcode:
     {% set insteadof=printer["gcode_macro var"]['filament2'] %}
     SAVE_VARIABLE VARIABLE=continue2 VALUE=1       ##mark the tunnel 2 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
+    Set_Rotation{insteadof}
     tt{insteadof}
     jinliao IN_NUM={insteadof}
 
@@ -55,6 +60,7 @@ gcode:
     {% set insteadof=printer["gcode_macro var"]['filament3'] %}
     SAVE_VARIABLE VARIABLE=continue3 VALUE=1       ##mark the tunnel 3 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
+    Set_Rotation{insteadof}
     tt{insteadof}
     jinliao IN_NUM={insteadof}
 
@@ -63,5 +69,16 @@ gcode:
     {% set insteadof=printer["gcode_macro var"]['filament4'] %}
     SAVE_VARIABLE VARIABLE=continue4 VALUE=1       ###mark the tunnel 4 is already use the instead filament
     SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} ##用文件记记录下当前的挤出机号，便于下次使用
+    Set_Rotation{insteadof}
     tt{insteadof}
     jinliao IN_NUM={insteadof}
+
+#模版X整个替换成新的通道号:   IX   filamentX  continueX
+#[gcode_macro IX]
+#gcode:
+#   {% set insteadof=printer["gcode_macro var"]['filamentX'] %}
+#    SAVE_VARIABLE VARIABLE=continueX VALUE=1       
+#    SAVE_VARIABLE VARIABLE=currentextruder VALUE={insteadof} 
+#    Set_Rotation{insteadof}
+#    tt{insteadof}
+#    jinliao IN_NUM={insteadof}
