--- a/AMS_LITE_Voron24 cfg/Lite_haredware.cfg
+++ b/AMS_LITE_Voron24 cfg/Lite_haredware.cfg
@@ -1,4 +1,5 @@
 # hardware setting #
+#硬件设置,需要根据通道数量更新
 
 [mcu b2]
 # serial: /dev/ttyACM1
@@ -83,7 +84,6 @@ tx_pin:   b2:gpio0
 uart_address:2
 run_current: 0.8 #0.55
 stealthchop_threshold: 0
-
 
 ##########################################################################################################################
 #3号电机与检测开关#
