--- a/AMS_LITE_Voron24 cfg/bug_fix.cfg
+++ b/AMS_LITE_Voron24 cfg/bug_fix.cfg
@@ -8,7 +8,6 @@ gcode:
         {action_respond_info("当前为 %d 号位尝试退料,并让 %d 号位颜色进料" % (svvc, tnum))}		
 	{% set inout = printer['filament_switch_sensor INOUT'].filament_detected %}  	##设置变量inout获取近程挤出机是否进料
         {action_respond_info("第1次触发INOUT保护程序:尝试多次进退料")}
-
         wakeup WAKEUP={svvc}
         M83
         G1 E{printer["gcode_macro var"].outs} F{printer["gcode_macro var"].inputokspeed} 
@@ -49,11 +48,13 @@ gcode:
       	  	G92 E0
     	    G1 E-10 F600
             {action_respond_info("出错！尝试退料同时防止机器待机，如不成功，请手动排除故障，并恢复打印")}
-            M117 hotend material exist, can't load another
+            M117 error,try to unload, or unload manually
             G4 P1000
             UPDATE_DELAYED_GCODE ID=strong_unload DURATION=5
 	  	{% else %}   
             {action_respond_info("故障排除！！！撒花~~~~~~~~~~~")}						##显示已成功加载耗材
+            M117 Successful!flowers!!!
+            M117 continue printing...
             UPDATE_DELAYED_GCODE ID=strong_unload DURATION=0							##关闭延时GCODE（因为已经加载到位了）
             G1 E{printer["gcode_macro var"].outs-50} F{printer["gcode_macro var"].inputokspeed}
             repeat_loading
