--- a/AMS_LITE_Voron24 cfg/printer.cfg
+++ b/AMS_LITE_Voron24 cfg/printer.cfg
@@ -17,6 +17,7 @@ on_error_gcode: CANCEL_PRINT
 [include MZ_Ams_lite.cfg]
 #[include printer-creality-sermoonD1.cfg]
 [include Voron2_Octopus_Config.cfg]
+[include SEARCH_VARS.cfg]
 
 [gcode_arcs]
 resolution: 0.1
@@ -26,9 +27,9 @@ resolution: 0.1
 [gcode_macro PRINT_START] #Some of the custom start gcode will make the AMS not work correctly, need to check carefully
 gcode: 
     prepare_for_printing
-	#G32         ##就在上面自定义的
+	#G32         
     G28
-	G90         ##相对绝对坐标切换
+	G90         
     G0 Z1
 	#M109 S{printer.extruder.target}      ##恢复打印头温度
 
@@ -43,7 +44,6 @@ gcode:
     {% set z_safe = [th.position.z + 2, th.axis_maximum.z]|min %}
     
     SAVE_GCODE_STATE NAME=STATE_PRINT_END
-    #buffer M=0
     buffer_OFF
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
@@ -64,8 +64,9 @@ gcode:
 gcode:
     {% set svv = printer.save_variables.variables %}
     { action_respond_info("Last Extruder: T%d" % (svv.currentextruder) ) }
-    wakeup WAKEUP={svv.currentextruder} 
-    resetcontinue
+    wakeup WAKEUP={svv.currentextruder}
+    Set_Rotation{svv.currentextruder}
+    reset_continue
 
     
 [temperature_sensor CPU]
@@ -170,7 +171,7 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = 4.100
+#*# z_offset = 4.200
 #*#
 #*# [bed_mesh default]
 #*# version = 1
