--- a/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
+++ b/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
@@ -22,11 +22,9 @@
 
 [include Var.cfg]                #All custom variables included, 包含所有的自定义参数
 [include Lite_haredware.cfg]
-#[include Filament_buffer_long.cfg]
-#[include Filament_buffer_short.cfg]
-[include Filament_buffer.cfg]
 [include bug_fix.cfg]
-[include Filament_Switch_Sensor.cfg]
+[include Filament_buffer.cfg]
+[include Filament_Continue.cfg]
 
 [display_status]
 
@@ -34,9 +32,10 @@
 description:所有开始打印前的变量重置和状态设置代码，在starting_print代码最开始直接加入这个宏即可
 gcode:
     	SET_GCODE_VARIABLE MACRO=var VARIABLE=state VALUE={1} ##更新为打印状态
-        reset_continue
-        buffer_start
+        reset_continue  #复位各通道耗材替代标记,初始状态全部为0
+        buffer_start   #开启缓冲器
 
+#挤出机切换配置,需要根据实际通道数量更新
 [gcode_macro T0]                ##有几个通道就添加几个
 gcode:
     {% set svv = printer.save_variables.variables %}
@@ -92,10 +91,17 @@ gcode:
        change_tool TOOL=4
     {% endif %} 
 
-##如果要添加新通道请参考模板修改X的内容↓↓↓
+##如果要添加新通道请参考模板修改X的内容↓↓↓ TX   continueX  filamentX   TOOL=X
 #[gcode_macro TX]
 #gcode:
-#    change_tool TOOL=X
+#    {% set svv = printer.save_variables.variables %}
+#    {% set con = svv.continueX %}  
+#    {% if con == 1 %}  
+#       {action_respond_info("TX intead tunnel used") }
+#       change_tool TOOL={printer["gcode_macro var"].filamentX}
+#    {% else %} 
+#       change_tool TOOL=X
+#    {% endif %} 
 ##如果要添加新通道请参考模板修改X的内容↑↑↑
 
 [gcode_macro breakout]
@@ -113,7 +119,6 @@ description:把指定挤出机的序列号写入文件
 gcode:
         {% set x= params.WAKEUP|default(0)|int %}  
         SAVE_VARIABLE VARIABLE=currentextruder VALUE={x}
-
 
 [gcode_macro moveout]
 description:中断/初始化所有的远程送料电机
@@ -211,7 +216,7 @@ gcode:
      {% endif %}
 
      SAVE_VARIABLE VARIABLE=currentextruder VALUE={TOOL}              #耗材切换完成，最后触发外部文件并记录当前的挤出机TOOL的num号，mm
-     Set_Rotation{svvc}                                               #耗材切换完成，最后触发外部文件并记录当前的挤出机的rotation_distance，mm
+     Set_Rotation{TOOL}                                               #耗材切换完成，最后触发外部文件并记录当前的挤出机的rotation_distance，mm
 
      {% if state == 1 %}                                   
           SET_GCODE_VARIABLE MACRO=var VARIABLE=runout VALUE={2}      ##更新为change_tool命令结束，命令只触发于打印阶段    
