--- a/AMS_LITE_Voron24 cfg/Var.cfg
+++ b/AMS_LITE_Voron24 cfg/Var.cfg
@@ -8,17 +8,16 @@ filename: ~/printer_data/config/variables.cfg
 variable_temp: 175					#用于存储默认升温温度
 
 #耗材接替顺序，如不特别设置，默认用轮换模式0-1-2-3-0
+#需要根据实际通道数量更新
 variable_filament0: 1        
 variable_filament1: 2
 variable_filament2: 3
 variable_filament3: 4
 variable_filament4: 0
 
-#variable_turn: 0 
-variable_tunnel: 5                  #用于存储当前的通道数量，从1开始,mm
-#variable_maxturn: 20	            #用于设定最大的进料尝试次数，超次报错，暂停打印
-#variable_rd_original: 3              
 
+variable_tunnel: 5                  #用于存储当前的通道数量，从1开始,mm
+         
 variable_state:0					#用于存储打印机的状态（0是未处于打印任务阶段，1是处于打印任务阶段）				
 variable_runout:0					#用于记录当前的状态以判定是否需要触发续料程序
 variable_motor:0
@@ -43,7 +42,7 @@ variable_outspeed:1200				#退料——耗材从喷头退出的速度
 ##### ↑↑↑ mz_out_color.cfg 变量↑↑↑ #####
 gcode:
 
-###以下的宏是为了能够让打印机切换耗材以后同时能读到切换耗材位置的温度并给喷头设置该温度
+###以下的宏是为了能够让打印机切换耗材以后同时能读到切换耗材位置的温度并给喷头设置该温度,需要根据实际通道数量更新
 ##请手动更新以下各通道的温度数值
 [gcode_macro tt0]
 gcode:
