--- a/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
+++ b/AMS_LITE_Voron24 cfg/MZ_Ams_lite.cfg
@@ -269,6 +269,7 @@ gcode:
             G1 E{printer["gcode_macro var"].inputoks} F{printer["gcode_macro var"].inputokspeed}
             UPDATE_DELAYED_GCODE ID=jinliao DURATION=0									##关闭延时GCODE（因为已经加载到位了）
 			{% if state == 1 %}															##如果打印机处于任务中
+                M117 Printing...
     			resume																		##恢复打印
 			{% endif %}
 		{% endif %}
