--- a/AMS_LITE_SW cfg/MZ_Ams_lite.cfg
+++ b/AMS_LITE_SW cfg/MZ_Ams_lite.cfg
@@ -25,7 +25,7 @@
 [include Lite_haredware.cfg]
 [include bug_fix.cfg]
 [include Filament_buffer.cfg]
-[include Filament_Continue.cfg]
+#[include Filament_Continue.cfg]
 
 [display_status]
 
@@ -154,7 +154,7 @@ gcode:
 
 [gcode_macro CUT]
 description: 使用切到切断耗材 by muimoon
-variable_cut_x: -2         #切断的极限位置X
+variable_cut_x: -5         #切断的极限位置X
 variable_x_max: 20        #x滑车安全移出的极限位置，默认为x方向最大值
 variable_cut_safe: 15      #从切断到恢复至安全位置的位移量
 variable_cut_y: 0          #切断的极限位置Y
@@ -182,7 +182,7 @@ gcode:
 #擦喷嘴   
 [gcode_macro Wipe_nozzle]
 description: 擦拭喷嘴 -by:FZai V1.0 modify by muimoon
-variable_ptfe_x: 200         #喷嘴在四氟管正上方并接触时的X轴坐标
+variable_ptfe_x: 185         #喷嘴在四氟管正上方并接触时的X轴坐标
 variable_ptfe_y: 0           #喷嘴在四氟管正上方并接触时的Y轴坐标（尽量靠近左侧螺丝孔圆心，且要大于1）
 #variable_ptfe_z: 4.0          #喷嘴在四氟管正上方并接触时的Z轴坐标
 variable_retract_l: 1        #正常回抽长度(就是切片软件里填的回抽长度)
@@ -194,16 +194,16 @@ variable_wipe_wide: 10         #擦拭时喷头移动宽度
 #variable_wipe_drop: 1         #擦拭时喷嘴下降距离
 #variable_retract_m: 1.5       #回抽倍数（值应在1~2之间，耗材粘性越大则该值越大）
 #以下参数不要动！ 不要动！ 不要动！
-variable_extrusion_dist: 37.3 #34.3 #四氟管与耗材挤出点的距离（在螺钉上挤出一坨）
+variable_extrusion_dist: 10 #34.3 #四氟管与耗材挤出点的距离（在螺钉上挤出一坨）
 
 gcode:  M117  Wipe_nozzle
     G90 #absolute positioning
     G83 #挤出机使用相对定位
 #    G1 E{retract_l]} F2000
  ##------移动到挤出点
-    G0 X{ptfe_x + extrusion_dist} Y{ptfe_y - 15} F15000
+    G0 X{ptfe_x + extrusion_dist} Y{ptfe_y} F15000
  ##------擦拭喷嘴
-    G4 P8000            #驻留：G4 P<毫秒> #8000
+    G4 P2000            #驻留：G4 P<毫秒> #8000
      {% for wipes in range(1, (wipe_qty + 2)) %}
         G1 X{ptfe_x + extrusion_dist - 2} F8000
         G1 X{ptfe_x + extrusion_dist + 2} F8000
@@ -213,7 +213,7 @@ gcode:  M117  Wipe_nozzle
         G1 X{ptfe_x - wipe_wide} F4000
         G1 X{ptfe_x + wipe_wide} F4000
      {% endfor %}
-    G0 X{ptfe_x + extrusion_dist} Y{ptfe_y - 15} F6000
+    G0 X{ptfe_x + extrusion_dist} Y{ptfe_y} F6000
     
 [gcode_macro CHANGE_TOOL]
 variable_nownum:0
@@ -312,11 +312,11 @@ gcode:
             G92 E0
             G1 E{printer["gcode_macro var"].inputoks} F{printer["gcode_macro var"].inputokspeed}
             UPDATE_DELAYED_GCODE ID=jinliao DURATION=0									##关闭延时GCODE（因为已经加载到位了）
-            M117 Printing...
 			{% if state == 1 %}															##如果打印机处于任务中
                 G92 E0
                 G1 E{printer["gcode_macro var"].purge} F200     
                 Wipe_nozzle
+                M117 Printing...
     			resume																		##恢复打印
 			{% endif %}
 		{% endif %}
